--- a/scss/Style.scss
+++ b/scss/Style.scss
@@ -29,6 +29,7 @@ body {
     padding: 0;
     margin: 0;
     color: $basic;
+    overflow-x: hidden;
     ul {
         list-style: none;
     }
@@ -203,6 +204,7 @@ body {
                 h4{
                     color: $basic;
                     padding-left: 5px;
+                    margin-top: 20px;
                 }
                 ul{
                     padding:5px;;
