--- a/css/Style.css
+++ b/css/Style.css
@@ -121,7 +121,8 @@ body {
           margin: 0; }
           body .main .content .home-calendar ul li {
             border-top: 1px solid #555555;
-            padding: 5px; }
+            padding: 5px;
+            padding-bottom: 10px; }
             body .main .content .home-calendar ul li:first-child {
               border-top: none; }
             body .main .content .home-calendar ul li a {
@@ -132,15 +133,14 @@ body {
                   float: right;
                   font-size: 11px; }
               body .main .content .home-calendar ul li a .match-team-logo {
-                width: 150px;
+                width: 130px;
                 display: block;
                 float: left; }
                 body .main .content .home-calendar ul li a .match-team-logo .team-logo {
                   width: 50px;
-                  margin-left: 20px; }
+                  margin-left: 10px; }
               body .main .content .home-calendar ul li a .match-team {
                 display: inline-block;
-                width: 200px;
                 padding-top: 7px;
                 margin-left: 20px; }
                 body .main .content .home-calendar ul li a .match-team .team-name {
@@ -172,3 +172,46 @@ body {
               text-transform: uppercase;
               color: #242323;
               font-weight: bolder; }
+      body .main .content .squad h3 {
+        color: #FFF;
+        padding-left: 5px;
+        margin-top: 20px; }
+      body .main .content .squad ul {
+        padding: 5px;
+        text-align: center;
+        display: flex;
+        -webkit-flex-flow: wrap;
+        -moz-flex-flow: wrap;
+        -ms-flex-flow: wrap;
+        -o-flex-flow: wrap;
+        flex-flow: wrap; }
+        body .main .content .squad ul li {
+          background: #d4001f;
+          flex-basis: 45%;
+          width: 45%;
+          border: 1px solid #555555;
+          border-top: 3px solid #FCD800;
+          margin-left: calc(2.5% - 1px);
+          margin-right: calc(2.5% - 1px);
+          margin-bottom: 15px; }
+          body .main .content .squad ul li a img {
+            width: 100%; }
+          body .main .content .squad ul li a div {
+            background: #d4001f;
+            width: 100%;
+            bottom: 0;
+            color: #FCD800;
+            display: flex;
+            border-top: 1px solid #555555; }
+            body .main .content .squad ul li a div .player-number {
+              width: 40px;
+              display: inline-block;
+              text-align: center;
+              line-height: 40px;
+              font-size: 25px;
+              border-right: 1px solid #555555; }
+            body .main .content .squad ul li a div .player-name {
+              width: calc(100% - 44px);
+              display: inline-block;
+              line-height: 20px;
+              text-transform: uppercase; }
