--- a/template/home.html
+++ b/template/home.html
@@ -1,3 +1,4 @@
+<img class='head-img' src="image/headImage.jpg" />
 <article class="home-calendar">
     <div class="home-calendar-tittle">
         <i class="fa fa-calendar"></i><span>Manchester United calendar</span>
