--- a/scss/Style.scss
+++ b/scss/Style.scss
@@ -24,12 +24,13 @@ $borderCl:#555555;
 @mixin borderBasic() {
     border: 1px solid $borderCl;
 }
-@mixin flex-flow(){
-    -webkit-flex-flow:wrap;
-    -moz-flex-flow:wrap;
-    -ms-flex-flow:wrap;
-    -o-flex-flow:wrap;
-    flex-flow:wrap;
+
+@mixin flex-flow() {
+    -webkit-flex-flow: wrap;
+    -moz-flex-flow: wrap;
+    -ms-flex-flow: wrap;
+    -o-flex-flow: wrap;
+    flex-flow: wrap;
 }
 
 body {
@@ -258,7 +259,7 @@ body {
                     @include flex-flow();
                     li {
                         background: $red;
-                        flex-basis:45%;
+                        flex-basis: 45%;
                         width: 45%;
                         @include borderBasic();
                         border-top: 3px solid $yel;
@@ -284,11 +285,126 @@ body {
                                     font-size: 25px;
                                     border-right: 1px solid $borderCl;
                                 }
-                                .player-name{
+                                .player-name {
                                     width: calc(100% - 44px);
                                     display: inline-block;
                                     line-height: 20px;
                                     text-transform: uppercase;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            .player-detail {
+                img {
+                    width: 100%;
+                }
+                .player-name-box {
+                    color: $basic;
+                    display: block;
+                    overflow: hidden;
+                    .player-name {
+                        margin-left: 1em;
+                        float: left;
+                        padding-bottom: 5px;
+                        text-transform: uppercase;
+                    }
+                    .player-number {
+                        float: right;
+                        margin-right: 1em;
+                    }
+                }
+                .player-info {
+                    background: $red2;
+                    margin-bottom: 1.5em;
+                    table {
+                        width: 100%;
+                        tr {
+                            background: $red;
+                            .info-col-left {
+                                width: 120px;
+                                color: $yel;
+                                padding: 2px;
+                                padding-left: 0.5em;
+                                font-size: 0.9em;
+                            }
+                            .info-col-right {
+                                color: $basic;
+                            }
+                        }
+                    }
+                }
+                .player-text {
+                    background: $basic;
+                    padding: 5px;
+                    .player-text-title {
+                        font-weight: bold;
+                    }
+                    .player-text-content {
+                        color: $borderCl;
+                        font-size: 0.9em;
+                    }
+                }
+            }
+            .table-page {
+                padding: 5px;
+                width: 100%;
+                overflow: hidden;
+                img {
+                    padding: 5px;
+                    width: 50px;
+                }
+                h4 {
+                    color: $basic;
+                    margin-bottom: 20px;
+                    width: calc(100% - 55px);
+                    display: inline-block;
+                }
+                table {
+                    text-align: center;
+                    border-collapse: collapse;
+                    width: 100%;
+                    color: $borderCl;
+                    tr {
+                        background: $basic;
+                        td {
+                            width: 20px;
+                            &:nth-child(3) {
+                                width: auto;
+                                text-align: left;
+                                padding-left: 5px;
+                            }
+                            &:nth-child(2) {
+                                text-align: right;
+                                width: 30px;
+                            }
+                        }
+                    }
+                    thead {
+                        @include borderBasic();
+                        tr {
+                            td {
+                                padding: 5px;
+                                font-weight: bold;
+                            }
+                        }
+                    }
+                    tbody {
+                        @include borderBasic();
+                        .mu-team {
+                            background: #E8E8E8;
+                        }
+                        tr {
+                            border-bottom: 1px solid $grey;
+                            td {
+                                &:nth-child(4) {
+                                    font-weight: bold;
+                                }
+                                padding-top: 5px;
+                                padding-bottom: 5px;
+                                img {
+                                    width: 100%;
                                 }
                             }
                         }
