--- a/template/team.html
+++ b/template/team.html
@@ -2,7 +2,7 @@
                 <h3>Goalkeeper</h3>
                 <ul>
                     <li ng-repeat="player in goalkeepers" class="player-box">
-                        <a href="#">
+                        <a href="#player/{{player.number}}">
                             <img class="player-img" src="{{player.image}}"/>
                             <div>
                                 <span class="player-number">{{player.number}}</span>
