Second pages commit

--- a/template/table.html
+++ b/template/table.html
@@ -1,5 +1,5 @@
 <div class="table-page">
-                <img src="../image/Premier_League_logo.svg"/>
+                <img src="image/Premier_League_logo.svg"/>
                 <h4>Barclays Priemer League</h4>
                 <table>
                     <thead>
