--- a/template/player.html
+++ b/template/player.html
@@ -1,5 +1,5 @@
 <div class="player-detail" ng-repeat="player in players">
-                <img src="image/player_detail/DeGea.jpg" />
+                <img src="{{player.detailImage}}" />
                 <div class="player-name-box">
                     <h3 class="player-name">{{player.name}}</h3>
                     <h3 class="player-number">{{player.number}}</h3>
