--- a/template/team.html
+++ b/template/team.html
@@ -14,7 +14,7 @@
                 <h3>Defender</h3>
                                 <ul>
                     <li ng-repeat="player in defenders" class="player-box">
-                        <a href="#">
+                        <a href="#player/{{player.number}}">
                             <img class="player-img" src="{{player.image}}"/>
                             <div>
                                 <span class="player-number">{{player.number}}</span>
@@ -26,7 +26,7 @@
                 <h3>Midfielder</h3>
                                 <ul>
                     <li ng-repeat="player in midfielders" class="player-box">
-                        <a href="#">
+                        <a href="#player/{{player.number}}">
                             <img class="player-img" src="{{player.image}}"/>
                             <div>
                                 <span class="player-number">{{player.number}}</span>
@@ -38,7 +38,7 @@
                 <h3>Striker</h3>
                                 <ul>
                     <li ng-repeat="player in strikers" class="player-box">
-                        <a href="#">
+                        <a href="#player/{{player.number}}">
                             <img class="player-img" src="{{player.image}}"/>
                             <div>
                                 <span class="player-number">{{player.number}}</span>
