--- a/css/Style.css
+++ b/css/Style.css
@@ -16,6 +16,7 @@ body {
     color: #FFF;
     background: #d4001f;
     height: 50px;
+    padding: 0 !important;
     border: 1px solid #555555; }
     body header button {
       float: left;
@@ -48,11 +49,11 @@ body {
   body #container.open {
     left: 0; }
   body .main {
-    -webkit-transition: all ease 0.5s;
-    -moz-transition: all ease 0.5s;
-    -ms-transition: all ease 0.5s;
-    -o-transition: all ease 0.5s;
-    transition: all ease 0.5s;
+    -webkit-transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    transition: all ease 0.3s;
     display: block;
     position: relative;
     width: calc(100% + 250px) !important;
@@ -243,14 +244,13 @@ body {
             body .main .content .player-detail .player-info table tr .info-col-left {
               width: 120px;
               color: #FCD800;
-              padding: 2px;
-              padding-left: 0.5em;
+              padding-left: 1em;
               font-size: 0.9em; }
             body .main .content .player-detail .player-info table tr .info-col-right {
               color: #FFF; }
       body .main .content .player-detail .player-text {
         background: #FFF;
-        padding: 5px; }
+        padding: 5px 10px 5px 10px; }
         body .main .content .player-detail .player-text .player-text-title {
           font-weight: bold; }
         body .main .content .player-detail .player-text .player-text-content {
@@ -412,3 +412,72 @@ body {
           body .main .content .calendar-page .calendar-list-content.show {
             display: block;
             opacity: 1; }
+      body .main .content .footer {
+        background-color: #E6E6E6;
+        padding: 10px;
+        padding-top: 3px; }
+        body .main .content .footer hr {
+          margin: 5px 0 5px 0; }
+        body .main .content .footer .social {
+          margin: 0;
+          padding: 0;
+          text-align: center; }
+          body .main .content .footer .social ul {
+            margin: 0;
+            padding: 5px; }
+            body .main .content .footer .social ul li {
+              margin: 5px;
+              list-style: none outside none;
+              display: inline-block; }
+          body .main .content .footer .social i {
+            width: 40px;
+            height: 40px;
+            color: #FFF;
+            background-color: #909AA0;
+            font-size: 22px;
+            text-align: center;
+            padding-top: 12px;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+            border-radius: 50%;
+            -webkit-transition: all ease 0.3s;
+            -moz-transition: all ease 0.3s;
+            -ms-transition: all ease 0.3s;
+            -o-transition: all ease 0.3s;
+            transition: all ease 0.3s; }
+            body .main .content .footer .social i:hover {
+              color: #FFF;
+              text-decoration: none;
+              transition: all ease 0.3s;
+              -moz-transition: all ease 0.3s;
+              -webkit-transition: all ease 0.3s;
+              -o-transition: all ease 0.3s;
+              -ms-transition: all ease 0.3s; }
+          body .main .content .footer .social .fa-facebook:hover:hover {
+            background: #4060A5; }
+          body .main .content .footer .social .fa-twitter:hover {
+            /* round twitter icon*/
+            background: #00ABE3; }
+          body .main .content .footer .social .fa-google-plus:hover {
+            /* round google plus icon*/
+            background: #e64522; }
+          body .main .content .footer .social .fa-instagram:hover {
+            /* round instagram icon*/
+            background: #375989; }
+          body .main .content .footer .social .fa-skype:hover {
+            /* round skype icon*/
+            background: #00C6FF; }
+          body .main .content .footer .social .fa-youtube:hover {
+            /* round youtube icon*/
+            background: #FF1F25; }
+          body .main .content .footer .social .fa-youtube-play:hover {
+            /* round youtube play button icon*/
+            background: #DF192A; }
+        body .main .content .footer .partners {
+          text-align: center;
+          overflow: hidden; }
+          body .main .content .footer .partners div img {
+            margin: 0 auto;
+            float: none; }
