--- a/css/Style.css
+++ b/css/Style.css
@@ -2,7 +2,8 @@ body {
   padding: 0;
   margin: 0;
   color: #FFF;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  font-family: Arial, Helvetica, sans-serif; }
   body ul {
     list-style: none; }
   body a {
@@ -17,7 +18,8 @@ body {
     background: #d4001f;
     height: 50px;
     padding: 0 !important;
-    border: 1px solid #555555; }
+    position: fixed !important;
+    z-index: 10; }
     body header button {
       float: left;
       display: inline-block;
@@ -26,8 +28,7 @@ body {
       width: 50px;
       background: transparent;
       border: none;
-      color: #242323;
-      border-right: 1px solid #555555;
+      color: #FFF;
       outline: none; }
     body header div {
       position: absolute;
@@ -56,49 +57,42 @@ body {
     transition: all ease 0.3s;
     display: block;
     position: relative;
-    width: calc(100% + 250px) !important;
+    width: calc(100% + 200px) !important;
     padding: 0 !important;
-    margin: 0 !important;
-    left: -250px; }
+    margin-top: 50px;
+    left: -200px; }
     body .main .nav-left {
-      position: absolute;
+      position: fixed;
       z-index: 1;
-      background: #242323;
-      width: 250px;
-      display: block; }
+      background: #d4001f;
+      width: 200px;
+      display: block;
+      height: 100%; }
       body .main .nav-left nav a {
-        text-align: center;
+        text-align: left;
         padding: 5px;
         width: 100%;
-        height: 50px;
         display: block;
-        border: 1px solid #555555;
-        border-bottom: none; }
-        body .main .nav-left nav a:last-child {
-          border-bottom: 1px solid #555555; }
-        body .main .nav-left nav a:first-child {
-          border-top: none; }
+        margin-top: 5px; }
         body .main .nav-left nav a i {
           float: left;
-          margin-left: 20px;
-          font-size: 35px;
-          color: #555555; }
+          margin-left: 10px;
+          font-size: 20px;
+          color: #FFF; }
         body .main .nav-left nav a span {
-          margin-top: 10px;
           height: 20px;
           font-size: 14px;
           display: inline-block;
-          width: 170px;
           text-align: left;
-          padding-left: 25px;
-          color: #555555; }
+          padding-left: 10px;
+          color: #FFF; }
     body .main .content {
       position: absolute;
       z-index: 2;
       background: #242323;
-      width: calc(100% - 250px);
+      width: calc(100% - 200px);
       display: block;
-      left: 250px; }
+      left: 200px; }
       body .main .content .head-img {
         width: 100%; }
       body .main .content .home-calendar {
