--- a/template/table.html
+++ b/template/table.html
@@ -1,6 +1,6 @@
 <div class="table-page">
-                <img src="../image/Premier_League_logo.svg"/>
-                <h4>Barclays Priemer League</h4>
+                <img src="{{leagueLogo}}"/>
+                <h4>{{leagueName}}</h4>
                 <table>
                     <thead>
                         <tr>
