--- a/template/table.html
+++ b/template/table.html
@@ -16,7 +16,7 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="team in table" ng-class="team.name == 'Manchester United' ? 'mu-team':''">
-                            <td style="background-image:url('../{{team.logo}}')"><span>{{team.position}}</span></td>
+                            <td style="background-image:url('{{team.logo}}')"><span>{{team.position}}</span></td>
                             <td>{{team.name}}</td>
                             <td>{{team.points}}</td>
                             <td>{{team.play}}</td>
